# web-template

./: .deepsource.toml  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.circleci/: config.yml
api/: .cutie.yaml  .gitattributes  .gitignore  BUILD.bazel  go.mod  go.sum  main.go  sqlc.json
api/auth/: BUILD.bazel  README.md  auth.go  auth_test.go  health.go  main.go
api/clients/make-api/: BUILD.bazel  client.go  local_server.go
api/clients/os-api/: BUILD.bazel  client.go  local_server.go
api/config/: BUILD.bazel  database.go
api/dbmodels/: .gitattributes
api/dbmodels/app/: BUILD.bazel  app.sql.go  db.go  models.go  querier.go
api/dbmodels/app/mock_app/: BUILD.bazel  querier_mock.go
api/dbmodels/make/: BUILD.bazel  db.go  make.sql.go  models.go  querier.go
api/dbmodels/make/mock_make/: BUILD.bazel  querier_mock.go
api/dbmodels/os/: BUILD.bazel  db.go  models.go  os.sql.go  querier.go
api/dbmodels/os/mock_os/: BUILD.bazel  querier_mock.go
api/dbmodels/phone/: BUILD.bazel  db.go  models.go  phone.sql.go  querier.go
api/dbmodels/phone/mock_phone/: BUILD.bazel  querier_mock.go
api/extauth/: BUILD.bazel  extauth.go
api/httprouter/: httprouter.go
api/make-api/repo/: BUILD.bazel  reader.go  repo.go  translations.go  types.go
api/make-api/server/: BUILD.bazel  read_server.go  server.go  types.go
api/os-api/repo/: BUILD.bazel  reader.go  repo.go  types.go
api/os-api/server/: BUILD.bazel  read_server.go  server.go  types.go
api/phone-api/repo/: BUILD.bazel  hydrated_reader.go  hydrated_repo.go  hydration.go  reader.go  repo.go  translations.go  types.go
api/phone-api/server/: BUILD.bazel  read_server.go  server.go  types.go
api/protobuf/: .gitattributes  README.md
api/protobuf/api/: api.pb.go  api_grpc.pb.go
api/protobuf/app/: app.pb.go
api/protobuf/make/: make.pb.go  make_reader.pb.go  make_reader_grpc.pb.go  make_service.pb.go  make_service_grpc.pb.go
api/protobuf/os/: os.pb.go  os_reader.pb.go  os_reader_grpc.pb.go  os_service.pb.go  os_service_grpc.pb.go
api/protobuf/phone/: phone.pb.go  phone_reader.pb.go  phone_reader_grpc.pb.go  phone_service.pb.go  phone_service_grpc.pb.go
api/s3/: s3.go
api/schema/queries/: app.sql  make.sql  os.sql  phone.sql
api/schema/tables/: .gitattributes  app.sql  make.sql  os.sql  phone.sql
api/server/: BUILD.bazel  server.go
api/server/address/: BUILD.bazel  ports.go
api/server/cursor/: BUILD.bazel  cursor.go  cursor_test.go  page.go  page_test.go
db/migrations/: 000001_create_os_table.down.sql  000001_create_os_table.up.sql  000002_create_make_table.down.sql  000002_create_make_table.up.sql  000003_create_phone_table.down.sql  000003_create_phone_table.up.sql  000004_create_app_table.down.sql  000004_create_app_table.up.sql
docs/design/: tech_choices.md
envoy/: envoy.yaml
protobuf/: .gitattributes  go.mod
protobuf/api/: BUILD.bazel  api.pb.go  api.proto  api_grpc.pb.go
protobuf/app/: BUILD.bazel  app.pb.go  app.proto
protobuf/image/: image.pb.go  image.proto  image_pb.d.ts
protobuf/make/: BUILD.bazel  make.pb.go  make.proto  make_reader.proto  make_service.proto
protobuf/os/: BUILD.bazel  os.pb.go  os.proto  os_reader.proto  os_service.proto
protobuf/phone/: BUILD.bazel  phone.pb.go  phone.proto  phone_reader.proto  phone_service.proto
web/: .eslintignore  .eslintrc.js  .eslintrc.json  gatsby-config.js  package-lock.json  package.json
web/clients/: api_client.ts  node_client.ts
web/clients/grpc-web/: make_service_client.ts  os_reader_client.ts  os_service_client.ts  phone_service_client.ts
web/clients/nodejs/: make_reader_client.ts  make_service_client.ts  os_reader_client.ts  os_service_client.ts  phone_reader_client.ts  phone_service_client.ts
web/components/: container.tsx  getOne.ts  httpStatusCode.tsx  listPage.tsx  make.tsx  os.tsx  phone.tsx  seo.tsx
web/pages/: 404.tsx  _app.tsx  _error.tsx  index.js  index.tsx
web/pages/make/: [id].tsx  index.tsx
web/pages/os/: [id].tsx  index.tsx
web/pages/phone/: [id].tsx  _phone.tsx  index.tsx
web/protobuf/: .gitattributes
web/protobuf/api/: api_grpc_pb.d.ts  api_grpc_pb.js
web/protobuf/app/: app_pb.js
web/protobuf/make/: Make_readerServiceClientPb.ts  Make_serviceServiceClientPb.ts  make_pb.js  make_reader_grpc_pb.d.ts  make_reader_grpc_pb.js  make_reader_pb.d.ts  make_reader_pb.js  make_service_grpc_pb.d.ts  make_service_grpc_pb.js  make_service_pb.d.ts  make_service_pb.js
web/protobuf/os/: Os_readerServiceClientPb.ts  Os_serviceServiceClientPb.ts  os_pb.js  os_reader_grpc_pb.d.ts  os_reader_grpc_pb.js  os_reader_pb.d.ts  os_reader_pb.js  os_service_grpc_pb.d.ts  os_service_grpc_pb.js  os_service_pb.d.ts  os_service_pb.js
web/protobuf/phone/: Phone_readerServiceClientPb.ts  Phone_serviceServiceClientPb.ts  phone_pb.js  phone_reader_grpc_pb.d.ts  phone_reader_grpc_pb.js  phone_reader_pb.d.ts  phone_reader_pb.js  phone_service_grpc_pb.d.ts  phone_service_grpc_pb.js  phone_service_pb.d.ts  phone_service_pb.js
web/src/clients/: api_client.ts
web/src/components/: container.tsx
web/src/pages/: 404.tsx  index.tsx  page-2.tsx
web/src/pages/phone/: index.tsx  phone.tsx
web/src/protobuf/api/: ApiServiceClientPb.ts  api_pb.d.ts  api_pb.js
web/src/protobuf/app/: app_pb.d.ts  app_pb.js
web/src/protobuf/image/: image_pb.js
web/src/protobuf/make/: make_pb.d.ts  make_pb.js
web/src/protobuf/os/: os_pb.d.ts  os_pb.js
web/src/protobuf/phone/: phone_pb.d.ts  phone_pb.js
web/styles/: antd.less
web1/: README.md  gatsby-config.js  gatsby-node.js  package-lock.json
web1/src/clients/: api_client.ts
web1/src/components/: image.tsx
web1/src/pages/phone/: index.tsx
web1/src/protobuf/app/: app_pb.js
web1/src/protobuf/make/: make_pb.js
