load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/rickypai/web-template/api
gazelle(name = "gazelle")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/rickypai/web-template/api",
    visibility = ["//visibility:private"],
    deps = [
        "//api/extauth",
        "//api/server",
        "//protobuf/api",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
