load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "auth_lib",
    srcs = [
        "auth.go",
        "health.go",
        "main.go",
    ],
    importpath = "github.com/rickypai/web-template/api/auth",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v3:auth",
        "@com_github_envoyproxy_go_control_plane//envoy/type/v3:type",
        "@go_googleapis//google/rpc:code_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "auth_test",
    srcs = ["auth_test.go"],
    embed = [":auth_lib"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v3:auth",
        "@com_github_stretchr_testify//assert",
    ],
)
