load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["database.go"],
    importpath = "github.com/rickypai/web-template/api/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v4//:pgx",
        "@com_github_jackc_pgx_v4//stdlib",
    ],
)
