load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "app_proto",
    srcs = ["app.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf/os:os_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "app_go_proto",
    importpath = "github.com/rickypai/web-template/api/protobuf/app",
    proto = ":app_proto",
    visibility = ["//visibility:public"],
    deps = ["//protobuf/os"],
)

go_library(
    name = "app",
    embed = [":app_go_proto"],
    importpath = "github.com/rickypai/web-template/api/protobuf/app",
    visibility = ["//visibility:public"],
)
