load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "os_proto",
    srcs = [
        "os.proto",
        "os_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "os_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rickypai/web-template/api/protobuf/os",
    proto = ":os_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "os",
    embed = [":os_go_proto"],
    importpath = "github.com/rickypai/web-template/api/protobuf/os",
    visibility = ["//visibility:public"],
)
