load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "make-api",
    srcs = [
        "client.go",
        "local_server.go",
    ],
    importpath = "github.com/rickypai/web-template/api/clients/make-api",
    visibility = ["//visibility:public"],
    deps = [
        "//api/make-api/server",
        "//api/server/address",
        "//protobuf/make",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
