load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "app.sql.go",
        "db.go",
        "models.go",
        "querier.go",
    ],
    importpath = "github.com/rickypai/web-template/api/dbmodels/app",
    visibility = ["//visibility:public"],
)
