load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "make",
    srcs = [
        "db.go",
        "make.sql.go",
        "models.go",
        "querier.go",
    ],
    importpath = "github.com/rickypai/web-template/api/dbmodels/make",
    visibility = ["//visibility:public"],
    deps = ["@com_github_lib_pq//:pq"],
)
