load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "phone",
    srcs = [
        "db.go",
        "models.go",
        "phone.sql.go",
        "querier.go",
    ],
    importpath = "github.com/rickypai/web-template/api/dbmodels/phone",
    visibility = ["//visibility:public"],
    deps = ["@com_github_lib_pq//:pq"],
)
