load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "reader.go",
        "translations.go",
        "types.go",
    ],
    importpath = "github.com/rickypai/web-template/api/make-api/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/make",
        "//api/server/cursor",
        "//protobuf/make",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)
