load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/rickypai/web-template/api/make-api/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/make-api/repo",
        "//api/server/cursor",
        "//protobuf/make",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
