load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "repo.go",
        "translations.go",
    ],
    importpath = "github.com/rickypai/web-template/api/os-api/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/os",
        "//api/server/cursor",
        "//protobuf/os",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)
