load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/rickypai/web-template/api/os-api/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/os-api/repo",
        "//api/server/cursor",
        "//protobuf/os",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
