load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "repo.go",
        "translations.go",
    ],
    importpath = "github.com/rickypai/web-template/api/phone-api/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/phone",
        "//api/server/cursor",
        "//protobuf/make",
        "//protobuf/os",
        "//protobuf/phone",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)
