load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/rickypai/web-template/api/phone-api/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/phone-api/repo",
        "//api/server/cursor",
        "//protobuf/phone",
    ],
)
