load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cursor",
    srcs = [
        "cursor.go",
        "page.go",
    ],
    importpath = "github.com/rickypai/web-template/api/server/cursor",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cursor_test",
    srcs = [
        "cursor_test.go",
        "page_test.go",
    ],
    embed = [":cursor"],
    deps = ["@com_github_stretchr_testify//assert"],
)
