load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock_app",
    srcs = ["querier_mock.go"],
    importpath = "github.com/rickypai/web-template/api/dbmodels/app/mock_app",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/app",
        "@com_github_golang_mock//gomock",
    ],
)
