load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock_make",
    srcs = ["querier_mock.go"],
    importpath = "github.com/rickypai/web-template/api/dbmodels/make/mock_make",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/make",
        "@com_github_golang_mock//gomock",
    ],
)
