load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock_phone",
    srcs = ["querier_mock.go"],
    importpath = "github.com/rickypai/web-template/api/dbmodels/phone/mock_phone",
    visibility = ["//visibility:public"],
    deps = [
        "//api/dbmodels/phone",
        "@com_github_golang_mock//gomock",
    ],
)
